--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -869,22 +869,29 @@ section,
   line-height: 24px;
   text-align: justify;
 }
-.about .img-fluid{
-  max-width: 700px;
-  max-height: 1400px;
+
+.about .img-fluid {
+  max-width: 100%; 
+  height: auto; 
+  margin: 0 auto; 
+  display: block; 
 }
+
 @media (max-width: 768px) {
   .about-img img {
-    max-width: 50%;
+    max-width: 80%;
     height: auto;
+    margin: 0 auto; 
   }
 
   .col-lg-6 {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center; 
   }
 }
+
 
 /*--------------------------------------------------------------
 # Values Section
