Adding Rekomendasi Formasi & Diklat Page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -753,6 +753,13 @@ section,
   color: var(--accent-color);
 }
 
+/*diklat*/
+.diklat {
+  width: 100%;
+  margin-left: 5px;
+  
+}
+
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
